# sandbox

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
3thrd/clib/c/: CMakeLists.txt  array.c  array.h  atomic.c  atomic.h  base64.c  base64.h  bytes.c  bytes.h  c.cmake  charset.c  charset.h  clib.h  convert.c  convert.h  cstring.c  cstring.h  date.c  date.h  error.c  error.h  file-utils.c  file-utils.h  global.c  global.h  glog.c  glog.h  hash-table.c  hash-table.h  hook.c  hook.h  host-utils.c  host-utils.h  list.c  list.h  log.c  log.h  macros.c  macros.h  mapped-file.c  (+40 more)
3thrd/fs/: CMakeLists.txt  acls.c  attrib.c  attrib.h  attrlist.c  bitmap.c  bootsect.c  cache.c  collate.c  compat.c  compat.h  compress.c  debug.h  defines.h  device.c  device.h  device_io.h  dir.c  dir.h  ea.c  efs.c  endians.h  index.c  inode.c  inode.h  ioctl.c  layout.h  lcnalloc.c  libsandbox-fs.cmake  logfile.c  logging.c  logging.h  mft.c  mft.h  misc.c  mst.c  ntfstime.h  object_id.c  param.h  realpath.c  (+12 more)
3thrd/fuse-lite/: CMakeLists.txt  fuse.c  fuse_kern_chan.c  fuse_loop.c  fuse_lowlevel.c  fuse_misc.h  fuse_opt.c  fuse_session.c  fuse_signals.c  fusermount.c  helper.c  libfuse-lite.cmake  mount.c  mount_util.c
3thrd/mate-terminal/: CMakeLists.txt  config.h  eggshell.c  profile-editor.c  skey-popup.c  terminal-accels.c  terminal-app.c  terminal-close-button.c  terminal-debug.c  terminal-encoding.c  terminal-info-bar.c  terminal-marshal.c  terminal-marshal.h  terminal-options.c  terminal-profile.c  terminal-resources.c  terminal-resources.h  terminal-screen-container.c  terminal-screen.c  terminal-tab-label.c  terminal-tabs-menu.c  terminal-type-builtins.c  terminal-type-builtins.h  terminal-util.c  terminal-version.h  terminal-window.c  terminal.c
3thrd/mate-terminal/skey/: btoe.c  md4.c  md5.c  sha1.c  skey.c  skeyutil.c
3thrd/nemo/: CMakeLists.txt  config.h  nemo-action-config-widget.c  nemo-actions.h  nemo-application.c  nemo-application.h  nemo-autorun-software.c  nemo-blank-desktop-window.c  nemo-blank-desktop-window.h  nemo-bookmark-list.c  nemo-bookmark-list.h  nemo-bookmarks-window.c  nemo-cinnamon-dbus.c  nemo-cinnamon-dbus.h  nemo-config-base-widget.c  nemo-connect-server-dialog-main.c  nemo-connect-server-dialog-nonmain.c  nemo-connect-server-dialog.c  nemo-connect-server-operation.c  nemo-desktop-application.c  nemo-desktop-application.h  nemo-desktop-icon-grid-view.c  nemo-desktop-icon-view.c  nemo-desktop-item-properties.c  nemo-desktop-main.c  nemo-desktop-manager.c  nemo-desktop-overlay.c  nemo-desktop-window.c  nemo-empty-view.c  nemo-error-reporting.c  nemo-error-reporting.h  nemo-extension-config-widget.c  nemo-extensions-list.c  nemo-file-management-properties.c  nemo-floating-bar.c  nemo-freedesktop-dbus.c  nemo-freedesktop-generated.c  nemo-freedesktop-generated.h  nemo-icon-view-container.c  nemo-icon-view-container.h  (+56 more)
3thrd/nemo/eel/: check-program.c  eel-accessibility.c  eel-art-extensions.c  eel-canvas.c  eel-debug.c  eel-editable-label.c  eel-gdk-extensions.c  eel-glib-extensions.c  eel-gnome-extensions.c  eel-graphic-effects.c  eel-gtk-extensions.c  eel-gtk-extensions.h  eel-lib-self-check-functions.c  eel-self-checks.c  eel-self-checks.h  eel-stock-dialogs.c  eel-string.c  eel-vfs-extensions.c
3thrd/nemo/libnemo-extension/: nemo-column-provider.c  nemo-column.c  nemo-desktop-preferences.c  nemo-extension-i18n.h  nemo-extension-private.h  nemo-file-info.c  nemo-info-provider.c  nemo-location-widget-provider.c  nemo-menu-item.c  nemo-menu-provider.c  nemo-menu.c  nemo-name-and-desc-provider.c  nemo-property-page-provider.c  nemo-property-page.c  nemo-simple-button.c
3thrd/nemo/libnemo-private/: nemo-action-manager.c  nemo-action.c  nemo-bookmark.c  nemo-centered-placement-grid.c  nemo-clipboard-monitor.c  nemo-clipboard.c  nemo-clipboard.h  nemo-column-chooser.c  nemo-column-chooser.h  nemo-column-utilities.c  nemo-column-utilities.h  nemo-dbus-manager.c  nemo-debug.h  nemo-default-file-icon.c  nemo-desktop-directory-file.c  nemo-desktop-directory-file.h  nemo-desktop-directory.c  nemo-desktop-directory.h  nemo-desktop-icon-file.c  nemo-desktop-icon-file.h  nemo-desktop-link-monitor.c  nemo-desktop-link-monitor.h  nemo-desktop-link.c  nemo-desktop-link.h  nemo-desktop-metadata.c  nemo-desktop-metadata.h  nemo-directory-async.c  nemo-directory-notify.h  nemo-directory-private.h  nemo-directory.c  nemo-directory.h  nemo-dnd.c  nemo-dnd.h  nemo-entry.c  nemo-file-changes-queue.c  nemo-file-conflict-dialog.c  nemo-file-dnd.c  nemo-file-dnd.h  nemo-file-operations.c  (+73 more)
app/: CMakeLists.txt  andsec-types.h  cgroup.c  cgroup.h  common.h  environ.c  environ.h  filesystem.c  filesystem.h  ipc.h  loop.c  loop.h  main.c  namespace.c  namespace.h  polkit.c  polkit.h  rc4.c  rc4.h  rootfs.c  rootfs.h  sandbox-fs.c  sandbox-fs.h  sandbox.c  sandbox.h  utils.c  utils.h
app/fs/: attr.c  attr.h  attrdef.c  attrdef.h  bitmap.c  bitmap.h  boot.c  boot.h  bootsect.c  bootsect.h  cache.c  cache.h  collate.c  collate.h  compat.c  compat.h  compress.c  compress.h  device.c  device.h  dir.c  dir.h  ea.c  ea.h  efs.c  efs.h  fs.c  fs.h  fstime.c  fstime.h  index.c  index.h  inode.c  inode.h  ioctl.c  ioctl.h  layout.h  lcnalloc.c  lcnalloc.h  log-file.c  (+29 more)
app/proto/: command-line.proto  extend-field.proto  ipc-message.c  ipc-message.h  proto.cmake
app/vfs/: sandbox-vfs-file-enumerator.cpp  sandbox-vfs-file-enumerator.h  sandbox-vfs-file.cpp  sandbox-vfs-file.h  vfs-manager.cpp  vfs-manager.h  vfs.cmake
data/: CMakeLists.txt  icons.qrc  org.sandbox.pkexec.policy  sandbox-file-manager.desktop  sandbox-terminator.desktop  sandbox.service
data/nemo-gresources/: nemo-directory-view-ui.xml  nemo-resource.c  nemo-resource.h  nemo-shell-ui.xml  nemo-shortcuts.ui
docs/: TODO  (+2 more)
test/: CMakeLists.txt  cgourp.c  check.c  format.c  mount.c  rc4.c  resize.c  umount.c
tools/: CMakeLists.txt  copy-files.cpp  header-view.cc  header-view.h  main-window.cc  main-window.h  sandbox-model.cc  sandbox-model.h  sandbox-view.cc  sandbox-view.h  singleton-app-gui.cpp  singleton-app-gui.h
(+11 files in other folders)
