install(FILES sandbox.service DESTINATION /etc/systemd/system/)
install(FILES org.nemo.gschema.xml DESTINATION /usr/share/glib-2.0/schemas/)
install(FILES org.mate.terminal.gschema.xml DESTINATION /usr/share/glib-2.0/schemas/)
install(FILES org.mate.interface.gschema.xml DESTINATION /usr/share/glib-2.0/schemas/)
